--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -6,19 +6,18 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'npm install'
+                bat 'npm install'
             }
         }
         stage('Test') {
             steps {
-                sh './jenkins/scripts/test.sh'
+                bat './Jenkins/scripts/test.sh'
             }
         }
         stage('Deliver') {
             steps {
-                sh './jenkins/scripts/deliver.sh'
-                input message: 'Finished using the web site? (Click "Proceed" to continue)'
-                sh './jenkins/scripts/kill.sh'
+                bat './Jenkins/scripts/deliver.sh'
+                bat './Jenkins/scripts/kill.sh'
             }
         }
     }
